--- a/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/WorkerRole/app.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/WorkerRole/app.config
@@ -60,11 +60,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Skype.Bots.Media" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.17.0.39" newVersion="1.17.0.39" />
+        <bindingRedirect oldVersion="0.0.0.0-1.19.0.25" newVersion="1.19.0.25" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -78,6 +78,9 @@
     <add key="BotName" value="%BotName%" />
     <add key="AadAppId" value="%AppId%" />
     <add key="AadAppSecret" value="%AppSecret%" />
+    <add key="SignalingPort" value="%SignalPort%" />
+    <add key="MediaPort" value="%MediaPort%" />
+    <add key="TcpForwardingPort" value="%TcpForwardingPort%" />
     <add key="H264_1280x720_30Fps" value="output720p.264" />
     <add key="H264_640x360_30Fps" value="output360p.264" />
     <add key="H264_320x180_15Fps" value="output180p.264" />
