--- a/Samples/V1.0Samples/AksSamples/teams-recording-bot/deploy/teams-recording-bot/templates/external.yaml
+++ b/Samples/V1.0Samples/AksSamples/teams-recording-bot/deploy/teams-recording-bot/templates/external.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Cluster
-  loadBalancerIP: {{ .Values.public.ip }}
+  loadBalancerIP: {{ include "publicIP" . }}
   ports:
   - name: http
     port: 80
