--- a/Samples/V1.0Samples/AksSamples/teams-recording-bot/deploy/teams-recording-bot/values.yaml
+++ b/Samples/V1.0Samples/AksSamples/teams-recording-bot/deploy/teams-recording-bot/values.yaml
@@ -6,10 +6,10 @@ scale:
   maxReplicaCount: 3
   replicaCount: 3
 
-host: ms.com
+host: null
 
 image:
-  domain: acr.azurecr.io
+  domain: null
   pullPolicy: IfNotPresent
   tag: ""
 
@@ -26,7 +26,7 @@ internal:
 
 public:
   media: 28550
-  ip:
+  ip: null
 
 node:
   target: scale
@@ -36,8 +36,6 @@ terminationGracePeriod: 54000
 container:
   env:
     azureSetting:
-      archiveDuration: 300 # 5 minutes
-      audioFrameDuration: 640 # Default PCM frame size in bytes on a teams call
       captureEvents: false
       eventsFolder: events
       mediaFolder: archive
