--- a/Samples/BetaSamples/StatelessSamples/OnlineMeetingSample/OnlineMeeting.csproj
+++ b/Samples/BetaSamples/StatelessSamples/OnlineMeetingSample/OnlineMeeting.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0-beta.1" />
     <PackageReference Include="Microsoft.Graph.Communications.Core" Version="1.2.0-beta.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
