Updated to utilize much more streamlined Teams integration infrastructure
* The bot can now be developed and deployed completely locally, without needing any of the Azure classic services we were using before
* All documentation has been updated
* Also made some modifications to the \psi sample itself
    * Organized the pipeline to have some more structure, which makes the diagnostics viz look nicer. Fixed a few operators along the way. Added delivery policies.
    * All video and audio messages are emitted with Pipeline.GetCurrentTime() (fixing the framerate issues we were seeing before), but with the "actual" message times lifted into the message payload itself, for later extraction if desired.
    * All source streams are immediately split out (and images are encoded) upon writing. This obviates the need for the TeamsDataConverter project.

--- a/Samples/V1.0Samples/LocalMediaSamples/PsiBot/TeamsBot/TeamsBot.csproj
+++ b/Samples/V1.0Samples/LocalMediaSamples/PsiBot/TeamsBot/TeamsBot.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Microsoft.Psi.TeamsBot</AssemblyName>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <CodeAnalysisRuleSet>..\Build\Sample.Psi.ruleset</CodeAnalysisRuleSet>
     <RootNamespace>Microsoft.Psi.TeamsBot</RootNamespace>
     <Description>Provides the ITeamsBot interface for integration \psi with Teams bots.</Description>
   </PropertyGroup>
