Added test branch as one to watch

--- a/Samples/V1.0Samples/LocalMediaSamples/ADF/templates/app-build-OrgName.yml
+++ b/Samples/V1.0Samples/LocalMediaSamples/ADF/templates/app-build-OrgName.yml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
     
   push:
-    branches: [ main ]
+    branches: [ main, sasthana/deploy-vmss ]
     paths:
       - ./Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/**
       - .github/workflows/app-build-*.yml
   pull_request:
-    branches: [ main ]
+    branches: [ main, sasthana/deploy-vmss ]
     paths:
       - ./Samples/V1.0Samples/LocalMediaSamples/AudioVideoPlaybackBot/**
       - .github/workflows/app-build-*.yml
