--- a/.github/workflows/app-infra-release-avtest6-avb.yml
+++ b/.github/workflows/app-infra-release-avtest6-avb.yml
@@ -1,25 +1,25 @@
-name: .NET BOT D1 INFRA avtest5
+name: .NET BOT D1 INFRA avtest6
 
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
   push:
-    branches: [main]
+    branches: [main, sasthana/deploy-vmss]
     paths:
-      - ADF/**
+      - ./Samples/V1.0Samples/LocalMediaSamples/ADF/**
       - .github/workflows/app-infra-release-*.yml
   pull_request:
-    branches: [main]
+    branches: [main, sasthana/deploy-vmss]
     paths:
-      - ADF/**
+      - ./Samples/V1.0Samples/LocalMediaSamples/ADF/**
       - .github/workflows/app-infra-release-*.yml
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 env:
-  OrgName: avtest5
+  OrgName: avtest6
   Location: centralus
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -40,7 +40,7 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          creds: ${{secrets.AZURE_CREDENTIALS_avtest5_BOT}}
+          creds: ${{secrets.AZURE_CREDENTIALS_avtest6_BOT}}
           enable-AzPSSession: true
 
       - name: Deploy_All_Subscription
@@ -53,10 +53,10 @@ jobs:
               Location        = $env:location
               FullUpload      = $true
             }
-            ./ADF/main.ps1 @Params
+            ./Samples/V1.0Samples/LocalMediaSamples/ADF/main.ps1 @Params
             if ($e){throw $e}
         env:
-          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_avtest5_BOT }}
+          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_avtest6_BOT }}
 
 
 
