--- a/.github/workflows/app-build-avtest6-avb.yml
+++ b/.github/workflows/app-build-avtest6-avb.yml
@@ -73,11 +73,12 @@ jobs:
       with:
         inlineScript: |
           Get-ChildItem -Path $env:GITHUB_WORKSPACE # -Recurse
+          Get-ChildItem -Path "$env:GITHUB_WORKSPACE/$env:Component" # -Recurse
           $Params = @{
             App           = 'avb'
             BuildName     = $env:BuildName
             ComponentName = $env:Component
-            BasePath      = "$env:GITHUB_WORKSPACE/$env:Base"
+            BasePath      = "$env:GITHUB_WORKSPACE/$env:Component/$env:Base"
             OrgName       = $env:OrgName
             Location      = $env:location
           }
