Updated the component names across the build files

--- a/.github/workflows/app-build-avtest6-avb.yml
+++ b/.github/workflows/app-build-avtest6-avb.yml
@@ -17,7 +17,7 @@ on:
 env:
   # /home/runner/work/publish
   Base:        publish
-  Component:   AudioVideoPlaybackBot
+  Component:   avb
   BuildName:   0.1.${{ github.run_number }}
   Environment: D1
   OrgName:     avtest6
