Remove Component from the base path of UpdateBuildMetadata stage

--- a/.github/workflows/app-build-avtest6-avb.yml
+++ b/.github/workflows/app-build-avtest6-avb.yml
@@ -73,7 +73,7 @@ jobs:
       with:
         inlineScript: |
           Get-ChildItem -Path $env:GITHUB_WORKSPACE # -Recurse
-          Get-ChildItem -Path "$env:GITHUB_WORKSPACE/$env:Base/$env:Component" # -Recurse
+
           $Params = @{
             App           = 'avb'
             BuildName     = $env:BuildName
@@ -96,7 +96,7 @@ jobs:
             App           = 'avb'
             BuildName     = $env:BuildName
             ComponentName = $env:Component
-            BasePath      = "$env:GITHUB_WORKSPACE/$env:Component/$env:Base"
+            BasePath      = "$env:GITHUB_WORKSPACE/$env:Base"
             OrgName       = $env:OrgName
             Location      = $env:location
             Environment   = $env:Environment
