--- a/Samples/V1.0Samples/LocalMediaSamples/ADF/templates/app-build-OrgName.yml
+++ b/Samples/V1.0Samples/LocalMediaSamples/ADF/templates/app-build-OrgName.yml
@@ -96,7 +96,7 @@ jobs:
             App           = 'avb'
             BuildName     = $env:BuildName
             ComponentName = $env:Component
-            BasePath      = "$env:GITHUB_WORKSPACE/$env:Component/$env:Base"
+            BasePath      = "$env:GITHUB_WORKSPACE/$env:Base"
             OrgName       = $env:OrgName
             Location      = $env:location
             Environment   = $env:Environment
