Update the test branch to pickup the build pipeline changes

--- a/.github/workflows/app-infra-release-demop1-avb.yml
+++ b/.github/workflows/app-infra-release-demop1-avb.yml
@@ -5,12 +5,12 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
   push:
-    branches: [main, sasthana/deploy-vmss]
+    branches: [main, sasthana/vmss-demo1]
     paths:
       - ./Samples/V1.0Samples/LocalMediaSamples/ADF/**
       - .github/workflows/app-infra-release-*.yml
   pull_request:
-    branches: [main, sasthana/deploy-vmss]
+    branches: [main, sasthana/vmss-demo1]
     paths:
       - ./Samples/V1.0Samples/LocalMediaSamples/ADF/**
       - .github/workflows/app-infra-release-*.yml
