--- a/.github/workflows/app-build-avb08-avb.yml
+++ b/.github/workflows/app-build-avb08-avb.yml
@@ -42,7 +42,6 @@ jobs:
     
     - name: Navigate to Workspace
       run: cd $GITHUB_WORKSPACE
-      run: pwd
     - name: Run pwsh
       shell: pwsh
       run: | 
@@ -51,12 +50,12 @@ jobs:
     - run: nuget restore Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln
     
     - name: Create Build Directory
-      run: pwd
-      run: mkdir ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+      run: |
+        mkdir ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+        pwd
     - name: Build Solution
       run: |
         msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=../../../${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
-      run: pwd
     - name: Run pwsh
       shell: pwsh
       run: | 
