--- a/.github/workflows/app-build-avb08-avb.yml
+++ b/.github/workflows/app-build-avb08-avb.yml
@@ -55,12 +55,12 @@ jobs:
         pwd
     - name: Build Solution
       run: |
-        msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+        msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=./${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
         pwd
     - name: Run pwsh
       shell: pwsh
       run: | 
-        dir ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+        Get-ChildItem -Path ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
         pwd
     - name: Login via Az module
       uses: azure/login@v1
@@ -72,7 +72,7 @@ jobs:
       uses: Azure/powershell@v1
       with:
         inlineScript: |
-          Get-ChildItem -Path $env:GITHUB_WORKSPACE # -Recurse
+          Get-ChildItem -Path $env:GITHUB_WORKSPACE/$env:Base/$env:Component/ # -Recurse
 
           $Params = @{
             App           = 'avb'
