used env var for path

--- a/.github/workflows/app-build-avb08-avb.yml
+++ b/.github/workflows/app-build-avb08-avb.yml
@@ -52,16 +52,13 @@ jobs:
     - name: Create Build Directory
       run: |
         mkdir ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
-        pwd
     - name: Build Solution
       run: |
-        msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=${{ env.GITHUB_WORKSPACE }}/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
-        pwd
+        msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=$GITHUB_WORKSPACE/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
     - name: Run pwsh
       shell: pwsh
       run: | 
-        Get-ChildItem -Path ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
-        pwd
+        Get-ChildItem -Path $GITHUB_WORKSPACE/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
     - name: Login via Az module
       uses: azure/login@v1
       with:
