Adding more stuff

--- a/.github/workflows/app-build-avb08-avb.yml
+++ b/.github/workflows/app-build-avb08-avb.yml
@@ -52,12 +52,13 @@ jobs:
     - name: Create Build Directory
       run: |
         mkdir ${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
-        $current_dir = (pwd).path
+        current_dir = (pwd).path
+        echo $current_dir
       env: 
         BUILD_PATH: $current_dir/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
     - name: Build Solution
       run: |
-        msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=$GITHUB_WORKSPACE/${{ env.Base }}/${{ env.Component }}/${{ env.BuildName }}/
+        msbuild.exe Samples\V1.0Samples\LocalMediaSamples\AudioVideoPlaybackBot.sln /nologo /p:Configuration=Release /p:platform="Any CPU" /p:OutDir=${{ env.BUILD_PATH }}
     - name: Run pwsh
       shell: pwsh
       run: | 
@@ -73,7 +74,7 @@ jobs:
       uses: Azure/powershell@v1
       with:
         inlineScript: |
-          Get-ChildItem -Path $GITHUB_WORKSPACE/$env:Base/$env:Component/$env:BuildName # -Recurse
+          Get-ChildItem -Path  # -Recurse
 
           $Params = @{
             App           = 'avb'
